@@ -1,5 +1,8 @@
-$Id: Changelog.txt,v 1.196 2014/07/01 13:01:17 nanard Exp $
+$Id: Changelog.txt,v 1.197 2014/09/06 08:31:39 nanard Exp $
 miniUPnP client Changelog.
+
+2014/09/06:
+  Fix python3 build
 
 2014/07/01:
   Fix parsing of IGD2 root descriptions
